--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^6.0.12",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "mongoose": "^6.13.2",
     "semver": "^7.6.3",
     "simple-update-notifier": "^2.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.5.5",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
